--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^5.0.2",
     "@kubernetes/client-node": "^0.16.1",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.2.3",
     "@nestjs/platform-express": "^8.0.0",
