--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^5.0.2",
+    "@grpc/grpc-js": "^1.5.7",
+    "@grpc/proto-loader": "^0.6.9",
     "@kubernetes/client-node": "^0.16.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
